# fit-kit

./: .env  .gitignore  README.md  docker-compose.yaml  pyproject.toml
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf  search.Dockerfile  worker.Dockerfile
frontend/: index.html  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: HeroOutfit.tsx  Landing.tsx  PipelineFooter.tsx  ProductCard.tsx  ProductModal.tsx  SearchBar.tsx  SkeletonCard.tsx  SlotRow.tsx
frontend/src/hooks/: useCatalogInfo.ts  useRecommend.ts
frontend/src/types/: api.ts
proto/: catalog.proto
scripts/: add_reviews_column.py  eval_c4.py  explore_dataset.py  gen_proto.sh  prepare_catalog_amazon.py  train_outfit_transformer.py
src/fit_kit/: __init__.py
src/fit_kit/core/: planner.py  prompts.py  query_intents.py  recommender.py  schemas.py  search.py
src/fit_kit/models/: outfit_transformer.py
src/fit_kit/utils/: device_utils.py  log_utils.py
src/search_service/: catalog_pb2.py  catalog_pb2_grpc.py  server.py
src/serve/: app.py  schemas.py  worker.py
